# whichway

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
src/: doctor.rs  lib.rs  main.rs  report.rs  resolvers.rs  shim_detect.rs
tests/: find_matches.rs
