[package]
name = "whichway"
version = "0.1.0"
edition = "2024"
description = "Read-only CLI that explains why a shell command resolves to a specific binary."
authors = ["nakornieiev"]
license = "MIT"
repository = "https://github.com/nakornieiev/whichway"
readme = "README.md"
keywords = ["cli", "path", "shell", "devtools", "diagnostics"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
owo-colors = "4.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
which = "8.0.4"

[dev-dependencies]
tempfile = "3.27.0"
